implement add and decide funtions

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,14 @@
         android:src="@drawable/ic_plate" />
 
     <TextView
+        android:id="@+id/tv_food_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/iv_plate"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="Hamburger"
-        android:textSize="16sp" />
+        android:text="Click the decider"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/et_add_food"
@@ -29,7 +30,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="150dp"
         android:hint="Add new food"
-        android:textSize="12sp" />
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/btn_add_food"
@@ -44,6 +45,7 @@
         android:id="@+id/btn_decider"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:text="Decider"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom" />
 </RelativeLayout>
